--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,8 @@
 name: calendar_date_picker2
 description: A lightweight and customizable calendar picker based on Flutter CalendarDatePicker, with support for single date picker, range picker and multi picker.
 version: 1.1.8
-homepage: https://github.com/theideasaler/calendar_date_picker2
+# homepage: https://github.com/theideasaler/calendar_date_picker2
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 environment:
   sdk: ">=2.16.2 <4.0.0"
